tests/ui/consts/write_to_static_via_mut_ref.stderr
error[E0764]: mutable borrows of lifetime-extended temporaries in the top-level scope of a static are not allowed
  --> $DIR/write_to_static_via_mut_ref.rs:1:26
   |
LL | static OH_NO: &mut i32 = &mut 42;
   |                          ^^^^^^^

error[E0594]: cannot assign to `*OH_NO`, as `OH_NO` is an immutable static item
  --> $DIR/write_to_static_via_mut_ref.rs:4:5
   |
LL |     *OH_NO = 43;
   |     ^^^^^^^^^^^ cannot assign

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0594, E0764.
For more information about an error, try `rustc --explain E0594`.
